fix(plugins/plugin-core-support): sidecar "window" buttons are too large
Fixes #5094

--- a/plugins/plugin-client-common/web/css/static/master-font-size.scss
+++ b/plugins/plugin-client-common/web/css/static/master-font-size.scss
@@ -1,26 +1,42 @@
+/*
+ * Copyright 2020 IBM Corporation
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 html.kui {
   &.kui--12px {
     --kui--master-font-size: 12px;
-    --kui--master-font-scale: calc(12 / 14);
+    --kui--master-font-scale: calc(12 / 16);
     font-size: var(--kui--master-font-size);
   }
 
   &.kui--14px {
     --kui--master-font-size: 14px;
-    --kui--master-font-scale: 1;
+    --kui--master-font-scale: 1calc (14 / 16);
     font-size: var(--kui--master-font-size);
   }
 
   &,
   &.kui--16px {
     --kui--master-font-size: 16px;
-    --kui--master-font-scale: calc(16 / 14);
+    --kui--master-font-scale: 1;
     font-size: var(--kui--master-font-size);
   }
 
   &.kui--18px {
     --kui--master-font-size: 18px;
-    --kui--master-font-scale: calc(18 / 14);
+    --kui--master-font-scale: calc(18 / 16);
     font-size: var(--kui--master-font-size);
   }
 
